--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta type="viewport" content="width=device-width, min-width=1.0">
     <title>Hi</title>
 </head>
 <body>
